--- a/patterns/templates/patterns/text3.html
+++ b/patterns/templates/patterns/text3.html
@@ -1,9 +1,12 @@
 {% extends "patterns/base.html" %}
 
 {% block content %}
-<meta charset="utf-8">
+<head>
+<meta content="text/html;charset=utf-8" http-equiv="Content-Type">
+<meta content="utf-8" http-equiv="encoding">
+</head>
 <body>
-    <h1>Here is a movable text graph</h1>
+    <h1>Here is a movable bubble graph</h1>
     <button type="button" onClick="next()">Next</button>
 
 
