--- a/patterns/templates/patterns/text3.html
+++ b/patterns/templates/patterns/text3.html
@@ -77,28 +77,27 @@
                 // Initialize the circle: all located at the center of the svg area
                 console.log(data)
                 var node = svg.append("g")
-                    .selectAll("circle")
+                    .selectAll("text")
                     .data(data)
                     .enter()
-                    .append("circle")
+                    .append("text")
                     .attr("id" ,function (d){
                         return d.name
                     })
-                    .attr("r", function (d) {
+                    .text( function (d) {
                         return size(d.group)
                     })
-                    .attr("cx", function (d) {
+                    .attr("x", function (d) {
                         return x(d.group)
                     })
-                    .attr("cy", function (d) {
+                    .attr("y", function (d) {
                         return y(d.group)
                     })
                     .style("fill", function (d) {
                         return color(d.group)
                     })
-                    .style("fill-opacity", 0.8)
                     .attr("stroke", "black")
-                    .style("stroke-width", 4)
+                    
 
                 //const elements = document.querySelectorAll("circle");
                 //elements.forEach(function(el) {
@@ -115,7 +114,7 @@
                     var largest = 0;
                     console.log(arr);
                     console.log(d.target);
-                    answer = d.target.getAttribute("r");
+                    answer = d.target.getAttribute("text");
                     console.log('Circle that was picked is: '+answer);
 
                     enddate = new Date();
