--- a/patterns/templates/patterns/text5.html
+++ b/patterns/templates/patterns/text5.html
@@ -1,39 +1,38 @@
 {% extends "patterns/base.html" %}
-
 {% block content %}
-<body>
-    <h1>Here is a movable bubble graph</h1>
+    <meta charset="utf-8">
+    <body>
+    <h1>Here is a movable 5 pt bubble graph</h1>
     <button type="button" onClick="next()">Next</button>
 
-
-    <div id="my_dataviz" class="my-border"></div>
+    <div id="my_dataviz"></div>
 
     <div class="instructions">
         <p>Please click on 'Next' to get started!</p>
     </div>
 
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
-    <script src="https://d3js.org/d3.v4.min.js"></script>
-    <script>
 
+    <script src="https://d3js.org/d3.v4.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
+    <script>
+        //Timer var
         var startdate = new Date();
         var starttimer = startdate.getTime();
         var clicked = 0;
         var enddate;
         var endtimer;
         var difftime;
-        var msdiff;
-        var sec;
-        var answer;
+        var msdiff ;
+
+        var sec
         // set the dimensions and margins of the graph
         var width = 600
         var height = 600
         var arr = [];
-        const n = 3;
+        const n = 5;
 
-        function next(){
+        function next() {
             if(clicked < 4) {
-                console.log("Clicked before adding is: "+clicked+"--made it in the first if--");
                 startdate = new Date();
                 starttimer = startdate.getTime();
 
@@ -52,32 +51,36 @@
                     .attr("height", 600)
 
                 // create dummy data -> just one element per circle
-                var data = [{"name": "A", "group": 1}, {"name": "B", "group": 2}, {"name": "C", "group": 3}]
+                var data = [{"name": "A", "group": 1}, {"name": "B", "group": 2}, {"name": "C", "group": 3}, {
+                    "name": "D",
+                    "group": 4
+                }, {"name": "E", "group": 5},/*{ "name": "F", "group": 6 },
+                            { "name": "G", "group": 7 }, { "name": "H", "group": 8 }, { "name": "I", "group": 9 }, { "name": "J", "group": 2 }, { "name": "K", "group": 2 }, { "name": "L", "group": 2 },
+                { "name": "M", "group": 3 }, { "name": "N", "group": 3 }, { "name": "O", "group": 3 }*/]
 
                 // A scale that gives a X target position for each group
                 var x = d3.scaleOrdinal()
-                    .domain([1, 2, 3])
-                    .range([300, 200, 400])
+                    .domain([1, 2, 3, 4, 5])
+                    .range([100, 100, 300, 500, 500])
 
                 // A scale that gives a Y target position for each group
                 var y = d3.scaleOrdinal()
-                    .domain([1, 2, 3])
-                    .range([200, 400, 400])
+                    .domain([1, 2, 3, 4, 5])
+                    .range([100, 500, 300, 100, 500])
 
                 // A scale that gives a radius for each group
                 var size = d3.scaleOrdinal()
-                    .domain([1, 2, 3])
-                    .range([arr[0], arr[1], arr[2]])
+                    .domain([1, 2, 3, 4, 5])
+                    .range([arr[0], arr[1], arr[2], arr[3], arr[4]])
 
                 // A color scale
                 var color = d3.scaleOrdinal()
-                    .domain([1, 2, 3])
-                    .range(["#F8766D", "#00BA38", "#619CFF"])
+                    .domain([1, 2, 3, 4, 5])
+                    .range(["#F8766D", "#00BA38", "#619CFF", "#F8766D", "#00BA38"])
 
                 // Initialize the circle: all located at the center of the svg area
-                console.log(data)
                 var node = svg.append("g")
-                    .selectAll("text")
+                .selectAll("text")
                     .data(data)
                     .enter()
                     .append("text")
@@ -99,22 +102,21 @@
                     .attr("stroke", "black")
                     
 
-                //const elements = document.querySelectorAll("circle");
-                //elements.forEach(function(el) {
-                //   el.addEventListener("click", click);
-                //});
-                const csvgA = document.getElementById('A');
-                const csvgB = document.getElementById('B');
-                const csvgC = document.getElementById('C');
+                let csvgA = document.querySelector("#A");
+                let csvgB = document.querySelector("#B");
+                let csvgC = document.querySelector("#C");
+                let csvgD = document.querySelector("#D");
+                let csvgE = document.querySelector("#E");
                 csvgA.addEventListener('click',click);
                 csvgB.addEventListener('click',click);
                 csvgC.addEventListener('click',click);
+                csvgD.addEventListener('click',click);
+                csvgE.addEventListener('click',click);
 
                 function click(d) {
                     var largest = 0;
                     console.log(arr);
-                    console.log(d.target);
-                    answer = d.target.getAttribute("text");
+                    answer = d.target.getAttribute("r");
                     console.log('Circle that was picked is: '+answer);
 
                     enddate = new Date();
@@ -126,10 +128,9 @@
                     sec = Math.floor((difftime % (1000 * 60)) / 1000);
 
                     d3.select('body').append('p').text('Ow, that hurt! \n It took you: ' + Math.abs(sec) + ' seconds and ' + Math.abs(msdiff) + ' ms.');
-                    clicked = clicked + 1;
-                    console.log("Clicked after adding is: "+clicked);
-                    d3.select('body').append('p').text('Button was clicked: '+clicked);
 
+                    clicked = clicked + 1;
+                    d3.select('body').append('p').text('Button was clicked: '+clicked);
 
                     var temp;
                     var largest = 0;
@@ -139,7 +140,8 @@
                             largest = temp;
                     }
 
-                    fetch("{% url 'patterns-text3' %}", {
+                    fetch("{% url 'patterns-text5' %}", {
+                        //header("Access-Control-Allow-Origin: *")
                         method: 'post',
                         body: JSON.stringify({
                             'time': Math.abs(msdiff),
@@ -148,20 +150,15 @@
                             'correctanswer':largest,
                             'answer':answer
                         }),
-                        headers: {
-                            'X-CSRFToken':document.cookie.split('=')[1]
-                        }
+                        headers: {'X-CSRFToken':document.cookie.split('=')[1]}
                     }).then((response)=>{console.log(document.cookie.split('=')[1])})
-                    console.log("Clicked before adding is: "+clicked+"--made it in the second if, within the first if--");
-                    next();
+                next();
                 }
-            }else{
-               moveon();
+            }else {
+                window.location.replace("{% url 'patterns-text9' %}");
+                //d3.select("svg").remove();
+                //d3.select('body').append('h1').text('You have finished your 3 trials. Please move on.');
             }
         }
-        function moveon(){
-            window.location.href = "{% url 'patterns-text5' %}";
-        }
-        </script>
-</body>
+    </script>
 {% endblock content %}
