--- a/patterns/templates/patterns/pygalexample.html
+++ b/patterns/templates/patterns/pygalexample.html
@@ -3,7 +3,7 @@
 {% block content %}
 <meta charset="utf-8">
 <body>
-    <h1>Here is a movable bubble graph</h1>
+    <h1>Here is our Bubble representation with 3 values</h1>
     <button type="button" onClick="next()">Next</button>
 
 
@@ -39,6 +39,7 @@
                 starttimer = startdate.getTime();
 
                 d3.select("svg").remove();
+                d3.select("p").remove();
                 arr = [];
                 do {
                     const randomNumber = Math.floor(Math.random() * Math.floor(100));
@@ -124,10 +125,10 @@
 
                     sec = Math.floor((difftime % (1000 * 60)) / 1000);
 
-                    d3.select('body').append('p').text('Ow, that hurt! \n It took you: ' + Math.abs(sec) + ' seconds and ' + Math.abs(msdiff) + ' ms.');
+                    //d3.select('body').append('p').text('Ow, that hurt! \n It took you: ' + Math.abs(sec) + ' seconds and ' + Math.abs(msdiff) + ' ms.');
                     clicked = clicked + 1;
                     console.log("Clicked after adding is: "+clicked);
-                    d3.select('body').append('p').text('Button was clicked: '+clicked);
+                    //d3.select('body').append('p').text('Button was clicked: '+clicked);
 
 
                     var temp;
