--- a/patterns/templates/patterns/text25.html
+++ b/patterns/templates/patterns/text25.html
@@ -1,6 +1,6 @@
 {% extends "patterns/base.html" %}
 {% block content %}
-    <h1>Here is a movable 25 pt bubble graph</h1>
+    <h1>Here is our Text representation with 25 values</h1>
     <button type="button" onClick="next()">Next</button>
 
     <div id="my_dataviz">   </div>
@@ -36,9 +36,8 @@
                 starttimer = startdate.getTime();
 
                 d3.select("svg").remove();
+                d3.select("p").remove();
                 arr = [];
-
-
                 do {
                     const randomNumber = Math.floor(Math.random() * Math.floor(50));
                     if (!arr.includes(randomNumber)) {
@@ -204,10 +203,10 @@
 
                     sec = Math.floor((difftime % (1000 * 60)) / 1000);
 
-                    d3.select('body').append('p').text('Ow, that hurt! \n It took you: ' + Math.abs(sec) + ' seconds and ' + Math.abs(msdiff) + ' ms.');
+                    //d3.select('body').append('p').text('Ow, that hurt! \n It took you: ' + Math.abs(sec) + ' seconds and ' + Math.abs(msdiff) + ' ms.');
 
                     clicked = clicked + 1;
-                    d3.select('body').append('p').text('Button was clicked: '+clicked);
+                    //d3.select('body').append('p').text('Button was clicked: '+clicked);
 
                     var temp;
                     var largest = 0;
