--- a/patterns/templates/patterns/text9.html
+++ b/patterns/templates/patterns/text9.html
@@ -2,7 +2,7 @@
 {% block content %}
     <meta charset="utf-8">
     <body>
-    <h1>Here is a movable 9 pt bubble graph</h1>
+    <h1>Here is our Text representation with 9 values</h1>
     <button type="button" onClick="next()">Next</button>
 
     <div id="my_dataviz"></div>
@@ -36,6 +36,7 @@
                 starttimer = startdate.getTime();
 
                 d3.select("svg").remove();
+                d3.select("p").remove();
                 arr = [];
                 do {
                     const randomNumber = Math.floor(Math.random() * Math.floor(100));
@@ -135,10 +136,10 @@
 
                     sec = Math.floor((difftime % (1000 * 60)) / 1000);
 
-                    d3.select('body').append('p').text('Ow, that hurt! \n It took you: ' + Math.abs(sec) + ' seconds and ' + Math.abs(msdiff) + ' ms.');
+                    //d3.select('body').append('p').text('Ow, that hurt! \n It took you: ' + Math.abs(sec) + ' seconds and ' + Math.abs(msdiff) + ' ms.');
 
                     clicked = clicked + 1;
-                    d3.select('body').append('p').text('Button was clicked: '+clicked);
+                    //d3.select('body').append('p').text('Button was clicked: '+clicked);
 
                     var temp;
                     var largest = 0;
